# easy_surreal

./: .gitignore  Cargo.toml
src/config/: mod.rs  parser.rs
