[package]
name = "easy_surreal"
version = "0.1.0"
edition = "2024"
description = "An extension library based on the surrealdb library to help users develop more conveniently."
authors=["fanghao1024@outlook.com"]
license = "MIT"
repository="https://github.com/fanghao1024/easy_surreal"
keywords=["surreal","surreal_db","sql"]


[dependencies]
surrealdb = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
# tokio 需兼容 2.4.0 的异步要求（rt-multi-thread 是必须的）
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.5.0"
serde_json = "1.0.149"
